# pcSecYeastSpecies

./: .gitignore  LOCAL_DEPLOYMENT.md  README.md  local_opn_pichia_glc.m  local_pichia_ref_glc.m  local_preflight.ps1  local_smoke_sce_glc.m  local_soplex_solver_smoke.ps1  local_verify_phase1.m  requirements.txt  run_matlab_checks.ps1  run_soplex_docker.ps1  run_streamlit.ps1  setup_wsl_soplex.ps1  start_pcSecYeastSpecies_lan.bat  startup_pcsec_local.m
python_pichia/: README.md  pyproject.toml
python_pichia/docs/: migration_progress.md
python_pichia/src/pcsec_pichia/: pipeline.py
python_pichia/src/pcsec_pichia/adapters/: aa_stoichiometry.py  lp_alignment.py  lp_parser.py  lp_solver.py  lp_writer.py  mat_loader.py  pichia_target_enzymedata.py  process_runner.py  soplex_output.py  soplex_solver.py
python_pichia/src/pcsec_pichia/alignment/: __init__.py  lp_diff.py  lp_package.py
python_pichia/src/pcsec_pichia/analysis/: __init__.py
python_pichia/src/pcsec_pichia/core/: graph_models.py  (+7 more)
python_pichia/tests/: test_alignment_entrypoints.py  test_constraints_entrypoints.py  test_gene_rule_overlay.py  test_independent_package.py  test_lp_diff_entrypoints.py  test_medium_entrypoints.py  test_pipeline_entrypoints.py  test_probe_migration.py  test_protein_cost_analysis.py  test_protein_cost_attribution_validation.py  test_reports_entrypoints.py  test_scope_freeze_contract.py  test_screens_entrypoints.py  test_secretion_plan_entrypoints.py  test_simulation_entrypoints.py  test_target_entrypoints.py  test_target_growth_analysis.py  test_yield_improvement_recommendations.py
(+152 files in other folders)
